--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -62,7 +62,16 @@
       <div class="row">
         <div class="col-md-12">
           <div class="card bg-dark card-details text-white">
-            <app-reviews></app-reviews>
+            <div class=" container">
+              <div class="row">
+                <div class="ml-auto">
+                  <div class="col-md-12">
+                    <a class="btn btn-sm btn-primary btn-lg " routerLink="/userprofile/moreselling">View
+                      More</a> </div>
+                </div>
+              </div>
+              <app-reviews></app-reviews>
+            </div>
           </div>
         </div>
       </div>
