--- a/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.html
@@ -5,18 +5,7 @@
             <div class="row">
                 <!-- Instructions for the user -->
                 <div class="col-md-4 ml-auto mr-auto mt-5">
-                    <div class="info info-horizontal">
-                        <div class="icon icon-primary">
-                            <i class="now-ui-icons media-2_sound-wave"></i>
-                        </div>
-                        <div>
-                            <h5 class="info-title">Product</h5>
-                            <p>
-                                Enter the product you want to buy <br>
-                                Better to keep it simple (a single word)
-                            </p>
-                        </div>
-                    </div>
+
                     <br>
                     <div class="info info-horizontal">
                         <div class="icon icon-primary">
@@ -57,31 +46,42 @@
                         </div>
                         <div class="card-body">
                             <form class="form-group" [formGroup]="broadcastForm">
-                                <div class="mt-2">
-                                    <div class="form-group"><label>Product</label>
-                                        <input [(ngModel)]="product" formControlName="product"
-                                            class="form-control border-input" placeholder="Enter the product you want"
-                                            type="text"
-                                            [ngClass]="{'is-invalid':broadcastForm.get('product').touched && broadcastForm.get('product').invalid}">
-                                        <div class="invalid-feedback">
-                                            <div>Product is required</div>
-                                        </div>
-                                    </div>
 
-                                </div>
-                                <div class="mt-4">
+                                <!-- <div class="mt-2">
+                                    <label>Product</label>
+                                    <input [(ngModel)]="product" formControlName="product"
+                                        class="form-control border-input" placeholder="Enter the product you want"
+                                        type="text"
+                                        [ngClass]="{'is-invalid':broadcastForm.get('product').touched && broadcastForm.get('product').invalid}">
+                                    <div class="invalid-feedback">
+                                        <div>Product is required</div>
+                                    </div>
+                                </div> -->
+
+                                <div class="mt-3">
                                     <label>Select category</label>
-                                    <select class="btn btn-neutral custom-select form-control" [(ngModel)]="category"
-                                        formControlName="category"
-                                        [ngClass]="{'is-invalid':broadcastForm.get('category').touched && broadcastForm.get('category').invalid}">
-                                        <option *ngFor="let item of categories">{{item}}</option>
-                                    </select>
+                                    <input (click)="[open(loginpop,'' , '')]" class="form-control border-input"
+                                        value="{{cat}}" type="text" placeholder="Select a category"
+                                        (keydown)="eventHandler($event)"
+                                        [ngClass]="{'is-invalid':broadcastForm.get('product').touched && broadcastForm.get('product').invalid}">
                                     <div class="invalid-feedback">
                                         <div>Category is required</div>
                                     </div>
                                 </div>
 
-                                <div class="mt-3">
+                                <!-- <div class="mt-4">
+                                    <label>Select category</label>
+                                    <select class="btn btn-neutral custom-select form-control" [(ngModel)]="category"
+                                        formControlName="category" (click)="[open(loginpop,'' , '')]"
+                                        [ngClass]="{'is-invalid':broadcastForm.get('category').touched && broadcastForm.get('category').invalid}">
+                                        <option value="ab" selected>as</option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        <div>Category is required</div>
+                                    </div>
+                                </div> -->
+
+                                <div class="mt-5">
                                     <div class="content"><label>Product Description</label>
                                         <textarea class="form-control" cols="80" rows="2" spellcheck="true"
                                             [(ngModel)]="textMessage" formControlName="textMessage">
@@ -89,52 +89,118 @@
                                     </div>
                                 </div>
 
-                                <div class="footer text-center">
-                                    <a class="btn btn-primary btn-lg btn-block" (click)="sendBroadcast()">Broadcast</a>
+                                <div class="mt-5">
+                                    <div class="footer text-center">
+                                        <a class="btn btn-primary btn-lg btn-block"
+                                            (click)="sendBroadcast()">Broadcast</a>
+                                    </div>
                                 </div>
-
                             </form>
                         </div>
                     </div>
                 </div>
 
 
+
                 <!-- /Broadcast form -->
             </div>
         </div>
     </div>
-    <footer class="footer footer-default">
-        <div class="container">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/about-us">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                            MIT License
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright">
-                &copy;
-                {{data | date: 'yyyy'}}, Designed by
-                <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+
+    <ng-template #loginpop let-c="close" let-d="dismiss">
+        <!-- Head -->
+        <div class="modal-header justify-content-center">
+            <button type="button" class="close" (click)="d('Cross click')">
+                <i class="now-ui-icons ui-1_simple-remove"></i>
+            </button>
+            <h4 class="title title-up">Select you category</h4>
+        </div>
+        <br>
+        <!-- /Head -->
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Electronics</h6>
+                            <tr *ngFor="let x of Electronics">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Fashion</h6>
+                            <tr *ngFor="let x of Fashion">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="mt-5"></div>
+            <div class="row">
+                <div class="mt-3"></div>
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Health and Beauty</h6>
+                            <tr *ngFor="let x of HealthandBeauty">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Motors</h6>
+                            <tr *ngFor="let x of Motors">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="mt-5"></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Collectables</h6>
+                            <tr *ngFor="let x of Collectables">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>Sports</h6>
+                            <tr *ngFor="let x of Sports">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="mt-5"></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <table>
+                        <tbody>
+                            <h6>HomeandGarden</h6>
+                            <tr *ngFor="let x of HomeandGarden">
+                                <td><a class="cat" (click)="getCat(x)">{{x}}</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </footer>
-</div>
+        <div class="mt-3"></div>
+
+    </ng-template>
