--- a/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.scss
+++ b/frontend/src/app/components/CustomerProfile/broadcast/broadcast.component.scss
@@ -5,3 +5,13 @@
 label {
     color: black;
 }
+
+.cat {
+    max-width: 800px;
+    margin: 1.75rem auto;
+}
+
+.cat:hover {
+    color: red !important;
+    cursor: pointer;
+}
