--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap.scss";
-@import 'assets/normalize.css';
-    @import 'assets/skeleton.css';
+// @import 'assets/normalize.css';
+//     @import 'assets/skeleton.css';
 
-    body {
-        overflow: hidden;
-        margin: 0;
-    }
+//     body {
+//         overflow: hidden;
+//         margin: 0;
+//     }
