--- a/frontend/src/app/pages/sellerview/sellerview.component.html
+++ b/frontend/src/app/pages/sellerview/sellerview.component.html
@@ -27,170 +27,170 @@
             to
             Bookmarks
           </button>
-          <button class="btn btn-primary btn-sm btn-round" type="button" 
-          [routerLink]="['/userprofile/makecomplain', 'user?.username']"  outerLinkActive="router-link-active"  routerLinkActive="router-link-active" ><i class="now-ui-icons ui-1_send"></i> Complain
-          about this 
-          Seller
-        </button>
-        </div> 
-
-          <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round" routerLink="/sellerview/messages">Message</a>
-          </div>&nbsp;
+          <button class="btn btn-primary btn-sm btn-round" type="button"
+            [routerLink]="['/userprofile/makecomplain', 'user?.username']" outerLinkActive="router-link-active"
+            routerLinkActive="router-link-active"><i class="now-ui-icons ui-1_send"></i> Complain
+            about this
+            Seller
+          </button>
         </div>
+
+        <div class="social-description">
+          <a class="btn btn-primary btn-lg btn-round" routerLink="/sellerview/messages">Message</a>
+        </div>&nbsp;
       </div>
     </div>
   </div>
-
-  <div class="mt-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5">
-          <div class="card bg-dark card-details text-white">
-            <app-ratingview></app-ratingview>
-          </div>
-        </div>
-        <div class="col-md-7">
-          <div class="card bg-dark text-white card-details">
-            <div class=" container">
-              <div class="row">
-                <div class=" col-md-12 col-sm-12">
-                  ABC
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
-    <div class="text-center container">
-      <div class="row">
-        <div class=" col-md-12 col-sm-12">
-          <div class="mt-5">
-            <h6 class="category category-absolute">Username</h6>
-            <h3>{{user?.username}}</h3>
-            <h6 class="category category-absolute">Email</h6>
-            <h3>{{user?.email}}</h3>
-
-            <div class="mt-5">
-              <div class="row">
-                <div class="col-md-4">
-                  <h6 class="category ">Telephone</h6>
-                  <h3>{{user?.telephone}}</h3>
-                </div>
-                <div class="col-md-4">
-                  <h6 class="category ">Owner Name</h6>
-                  <h3>{{user?.firstname}} {{user?.lastname}} </h3>
-                </div>
-                <div class="col-md-4">
-                  <h6 class="category ">Address</h6>
-                  <h3>{{user?.line1}},{{user?.line2}},{{user?.line3}}</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="mt-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <h3>Seller Details</h3>
-            <div class="col-md-12">
-              <div class="row">
-              </div>
-              <p class="category category-absolute">Email</p>
-              <h3>{{user?.username}}</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="mt-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <h3>Selling Items</h3>
-            <div class="col-md-12">
-              <div class="row">
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="mt-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <h3>Reviews</h3>
-            <div class="col-md-12">
-              <div class="row">
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <agm-map [latitude]="lat" [longitude]="lng">
-    <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-  </agm-map>
-
-
-
-  <footer class="footer footer-default">
-    <div class="container">
-      <nav>
-        <ul>
-          <li>
-            <a href="https://www.creative-tim.com">
-              Creative Tim
-            </a>
-          </li>
-          <li>
-            <a href="https://www.creative-tim.com/about-us">
-              About Us
-            </a>
-          </li>
-          <li>
-            <a href="http://blog.creative-tim.com">
-              Blog
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-              MIT License
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="copyright">
-        &copy;
-        {{data | date: 'yyyy'}}, Designed by
-        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-      </div>
-    </div>
-  </footer>
 </div>
+
+<div class="mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5">
+        <div class="card bg-dark card-details text-white">
+          <app-ratingview></app-ratingview>
+        </div>
+      </div>
+      <div class="col-md-7">
+        <div class="card bg-dark text-white card-details">
+          <div class=" container">
+            <div class="row">
+              <div class=" col-md-12 col-sm-12">
+                ABC
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="subscribe-line subscribe-line-transparent" style="background-image: url('assets/img/banner.jpg')">
+  <div class="text-center container">
+    <div class="row">
+      <div class=" col-md-12 col-sm-12">
+        <div class="mt-5">
+          <h6 class="category category-absolute">Username</h6>
+          <h3>{{user?.username}}</h3>
+          <h6 class="category category-absolute">Email</h6>
+          <h3>{{user?.email}}</h3>
+
+          <div class="mt-5">
+            <div class="row">
+              <div class="col-md-4">
+                <h6 class="category ">Telephone</h6>
+                <h3>{{user?.telephone}}</h3>
+              </div>
+              <div class="col-md-4">
+                <h6 class="category ">Owner Name</h6>
+                <h3>{{user?.firstname}} {{user?.lastname}} </h3>
+              </div>
+              <div class="col-md-4">
+                <h6 class="category ">Address</h6>
+                <h3>{{user?.line1}},{{user?.line2}},{{user?.line3}}</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-2">
+        <div class="card text-center" style=" width: 70rem;">
+          <h3>Seller Details</h3>
+          <div class="col-md-12">
+            <div class="row">
+            </div>
+            <p class="category category-absolute">Email</p>
+            <h3>{{user?.username}}</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-2">
+        <div class="card text-center" style=" width: 70rem;">
+          <h3>Selling Items</h3>
+          <div class="col-md-12">
+            <div class="row">
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="mt-2">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-2">
+        <div class="card text-center" style=" width: 70rem;">
+          <h3>Reviews</h3>
+          <div class="col-md-12">
+            <div class="row">
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<agm-map [latitude]="lat" [longitude]="lng">
+  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+</agm-map>
+
+
+
+<footer class="footer footer-default">
+  <div class="container">
+    <nav>
+      <ul>
+        <li>
+          <a href="https://www.creative-tim.com">
+            Creative Tim
+          </a>
+        </li>
+        <li>
+          <a href="https://www.creative-tim.com/about-us">
+            About Us
+          </a>
+        </li>
+        <li>
+          <a href="http://blog.creative-tim.com">
+            Blog
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
+            MIT License
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="copyright">
+      &copy;
+      {{data | date: 'yyyy'}}, Designed by
+      <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+      <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+    </div>
+  </div>
+</footer>
