--- a/frontend/src/app/components/components.component.html
+++ b/frontend/src/app/components/components.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="orange">
         <div class="page-header-image rellax-header" data-rellax-speed="-7"
-            style="background-image: url('assets/img/header.jpg');">
+            style="background-image: url('assets/img/new/homere.png');">
         </div>
 
         <!--model component-->
