--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -1,10 +1,9 @@
-
 <div class="wrapper">
   <div class="page-header page-header-small" filter-color="orange">
 
     <!-- Profile Banner -->
     <div class="page-header-image rellax-header" data-rellax-speed="-8"
-      style="background-image: url('assets/img/bg5.jpg') ;">
+      style="background-image: url('assets/img/new/homee1.jpg') ;">
     </div>
 
     <div class="container">
