--- a/frontend/src/app/components/FinalizingComponent/finalizingformview/finalizingformview.component.html
+++ b/frontend/src/app/components/FinalizingComponent/finalizingformview/finalizingformview.component.html
@@ -71,67 +71,63 @@
   <div class="mt-2">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-sm-2">
-          <div class="card text-center" style=" width: 70rem;">
-            <div class="col-md-12">
-              <!-- Broadcast Table -->
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="container">
-                      <div class="row">
+        <div class="card text-center" style=" width: 70rem;">
+          <div class="col-md-12">
+            <!-- Broadcast Table -->
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="container">
+                    <div class="row">
 
-                        <div class="ml-auto">
-                          <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
-                            More</a>
-                        </div>
+                      <div class="ml-auto">
+                        <a class="btn btn-sm btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">View
+                          More</a>
                       </div>
                     </div>
-
-                    <form>
-                      <table class="table table-striped">
-                        <thead>
-                          <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
-                            <th scope="col">Finalize</th>
-                            <th scope="col">Remove</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-
-                          <tr *ngFor="let x of finalizingForms?.item">
-                            <ng-template [ngIf]="x.category == itemDetails?.item[0].category">
-                              <td>{{x.sellerId}}</td>
-                              <a routerLink="/userprofile/search/{{x.sellerName}}">
-                                <td>
-                                  {{x.sellerName}}
-                                </td>
-                              </a>
-                              <td>
-                                <div class="social-description">
-                                  <a class="btn btn-primary btn-sm"
-                                    routerLink="/userprofile/acceptfinalize/{{x.productId}}">F</a>
-                                </div>
-                              </td>
-                              <td>
-                                <div class="social-description">
-                                  <a href="#button" class="btn btn-primary btn-sm"><i
-                                      class="now-ui-icons ui-1_simple-remove"></i></a>
-                                </div>
-                              </td>
-                            </ng-template>
-                          </tr>
-
-                        </tbody>
-                      </table>
-                    </form>
-
                   </div>
+
+                  <form>
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th scope="col">ID</th>
+                          <th scope="col" sortable="name" (sort)="onSort($event)">Username</th>
+                          <th scope="col">Finalize</th>
+                          <th scope="col">Remove</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+
+                        <tr *ngFor="let x of filteredFinalizingForms">
+                          <td>{{x.sellerId}}</td>
+                          <a routerLink="/userprofile/search/{{x.sellerName}}">
+                            <td>
+                              {{x.sellerName}}
+                            </td>
+                          </a>
+                          <td>
+                            <div class="social-description">
+                              <a class="btn btn-primary btn-sm"
+                                routerLink="/userprofile/acceptfinalize/{{x.productId}}">F</a>
+                            </div>
+                          </td>
+                          <td>
+                            <div class="social-description">
+                              <a href="#button" class="btn btn-primary btn-sm"><i
+                                  class="now-ui-icons ui-1_simple-remove"></i></a>
+                            </div>
+                          </td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                  </form>
+
                 </div>
               </div>
-              <!-- /Broadcast Table -->
             </div>
+            <!-- /Broadcast Table -->
           </div>
         </div>
       </div>
